; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_ab8500-core.c_ab8500_mask_and_set_register.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_ab8500-core.c_ab8500_mask_and_set_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.ab8500 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32, i32, i32, i32)* @ab8500_mask_and_set_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ab8500_mask_and_set_register(%struct.device* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.ab8500*, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.device*, %struct.device** %6, align 8
  %14 = getelementptr inbounds %struct.device, %struct.device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.ab8500* @dev_get_drvdata(i32 %15)
  store %struct.ab8500* %16, %struct.ab8500** %12, align 8
  %17 = load %struct.ab8500*, %struct.ab8500** %12, align 8
  %18 = getelementptr inbounds %struct.ab8500, %struct.ab8500* %17, i32 0, i32 0
  %19 = call i32 @atomic_inc(i32* %18)
  %20 = load %struct.ab8500*, %struct.ab8500** %12, align 8
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* %10, align 4
  %25 = call i32 @mask_and_set_register_interruptible(%struct.ab8500* %20, i32 %21, i32 %22, i32 %23, i32 %24)
  store i32 %25, i32* %11, align 4
  %26 = load %struct.ab8500*, %struct.ab8500** %12, align 8
  %27 = getelementptr inbounds %struct.ab8500, %struct.ab8500* %26, i32 0, i32 0
  %28 = call i32 @atomic_dec(i32* %27)
  %29 = load i32, i32* %11, align 4
  ret i32 %29
}

declare dso_local %struct.ab8500* @dev_get_drvdata(i32) #1

declare dso_local i32 @atomic_inc(i32*) #1

declare dso_local i32 @mask_and_set_register_interruptible(%struct.ab8500*, i32, i32, i32, i32) #1

declare dso_local i32 @atomic_dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
